crates/jarl-cli/tests/integration/snapshots/integration__comments__nolint_start_end.snap
---
source: crates/jarl-cli/tests/integration/comments.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
test.R [7:0] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
test.R [16:4] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.

Found 2 errors.
2 fixable with the `--fix` option.

----- stderr -----

----- args -----
check .
